# oif-solver-rust

./: BLOCKCHAIN_IMPLEMENTATION_PLAN.md  Cargo.toml  DESIGN.md  EXECUTION_PATTERNS.md  IMPLEMENTATION_PLAN.md  PERSISTENCE.md  README.md  steps.md  test_server.sh
abi/: SettlerCompact.json
config/: local.toml
data/: orders.json
src/: config.rs  main.rs  server.rs
src/contracts/: factory.rs  mod.rs
src/contracts/abi/: definitions.rs  mod.rs
src/contracts/encoding/: alloy_encoder.rs  foundry_encoder.rs  mod.rs  traits.rs
src/contracts/execution/: alloy_executor.rs  factory.rs  mod.rs  openzeppelin_executor.rs  traits.rs
src/contracts/operations/: fill.rs  mod.rs  settlement.rs
src/handlers/: health.rs  mod.rs  orders.rs  queue.rs
src/models/: mandate.rs  mod.rs  order.rs
src/services/: cross_chain.rs  execution_service.rs  finalization.rs  mod.rs  monitoring.rs
src/storage/: memory.rs  mod.rs
