[package]
name = "oif-solver-rust"
version = "0.1.0"
edition = "2021"
description = "OIF Protocol Solver POC in Rust"
authors = ["OpenZeppelin <info@openzeppelin.com>"]

[dependencies]
# HTTP Server
actix-web = "4.4"
actix-cors = "0.7"

# Blockchain
alloy = { version = "1.0", features = [
    "full",          
    "sol-types",
    "contract",
    "providers",
    "signers",
    "network",
    "rpc-types"
] }


# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
bytes = "1.5"

# Ethers ABI encoding (minimal dependency to fix Alloy 1.0 bug)
ethers-core = "2"
ethabi = "18"

# CRITICAL FIX: Add full ethers for contract interface (to match TypeScript exactly)
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }

[dev-dependencies]
tokio-test = "0.4" 


#[[bin]]
#name = "verify_signatures"
#path = "src/verify_signatures.rs"